CostalCloud/force-app/main/default/objects/WorkOrder.object
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>