CostalCloud/force-app/main/default/objects/WorkOrder/fields/Acknowledgement_Message__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Message__c</fullName>
    <label>Acknowledgement Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>