CostalCloud/force-app/main/default/objects/WorkOrder/fields/Alarm_Present__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alarm Present</label>
    <type>Checkbox</type>
</CustomField>