CostalCloud/force-app/main/default/objects/WorkOrder/fields/All_Documents_Approved__c.field-meta.xml
<CustomField>
    <fullName>All_Documents_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Documents Approved</label>
    <type>Checkbox</type>
</CustomField>