CostalCloud/force-app/main/default/objects/WorkOrder/fields/All_documents_sent_to_client_via_API__c.field-meta.xml
<CustomField>
    <fullName>All_documents_sent_to_client_via_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All documents sent to client via API</label>
    <type>Checkbox</type>
</CustomField>