CostalCloud/force-app/main/default/objects/WorkOrder/fields/Amount_of_Electric_WO__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Electric_WO__c</fullName>
    <label>Amount of Electric WO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>