CostalCloud/force-app/main/default/objects/WorkOrder/fields/Amount_of_Other_WO__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Other_WO__c</fullName>
    <inlineHelpText>Amount assigned to child work orders that do not fall in the main category of &quot;Electric&quot; or &quot;Plumbing&quot;.</inlineHelpText>
    <label>Amount of Other WO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>