CostalCloud/force-app/main/default/objects/WorkOrder/fields/Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining__c</fullName>
    <formula>Amount__c  -  Amount_of_Electric_WO__c  -  Amount_of_Plumbing_WO__c -  Amount_of_Other_WO__c -  Amount_Requested_Reduced_PO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>