CostalCloud/force-app/main/default/objects/WorkOrder/fields/Amount_Requested_Reduced_PO__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested_Reduced_PO__c</fullName>
    <inlineHelpText>Labor lines where installer requested reduced PO</inlineHelpText>
    <label>Amount Requested Reduced PO</label>
    <summarizedField>Labor__c.Amount_Reduced_Total__c</summarizedField>
    <summaryForeignKey>Labor__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>