CostalCloud/force-app/main/default/objects/WorkOrder/fields/Any_Design_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Any_Design_Concerns__c</fullName>
    <label>Any Design Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>