CostalCloud/force-app/main/default/objects/WorkOrder/fields/API_Home_Year_Built_Changed__c.field-meta.xml
<CustomField>
    <fullName>API_Home_Year_Built_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Populates when year home built field is changed, API now sends data to THD</inlineHelpText>
    <label>API Home Year Built Changed</label>
    <type>Checkbox</type>
</CustomField>