CostalCloud/force-app/main/default/objects/WorkOrder/fields/API_Lead_Test_Results_Changed__c.field-meta.xml
<CustomField>
    <fullName>API_Lead_Test_Results_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PB updates field value when changed, API sends update to THD</inlineHelpText>
    <label>API Lead Test Results Changed</label>
    <type>Checkbox</type>
</CustomField>