CostalCloud/force-app/main/default/objects/WorkOrder/fields/API_Scheduled_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>API_Scheduled_Date_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is checked when the scheduled date is changed, API should send update to THD</inlineHelpText>
    <label>API Scheduled Date Changed</label>
    <type>Checkbox</type>
</CustomField>