CostalCloud/force-app/main/default/objects/WorkOrder/fields/Are_you_sure_Install_PO_Will_be_Locked__c.field-meta.xml
<CustomField>
    <fullName>Are_you_sure_Install_PO_Will_be_Locked__c</fullName>
    <label>Are you sure? Install PO Will be Locked!</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>