CostalCloud/force-app/main/default/objects/WorkOrder/fields/Are_you_sure_Measure_PO_will_be_locked__c.field-meta.xml
<CustomField>
    <fullName>Are_you_sure_Measure_PO_will_be_locked__c</fullName>
    <label>Are you sure? Measure PO will be locked!</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>