CostalCloud/force-app/main/default/objects/WorkOrder/fields/Auto_Push_Note_AutoCreate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Push_Note_AutoCreate__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, the PO Note will be sent to the Client system</inlineHelpText>
    <label>Auto Push Note</label>
    <type>Checkbox</type>
</CustomField>