CostalCloud/force-app/main/default/objects/WorkOrder/fields/Basic_Install_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basic_Install_Amount__c</fullName>
    <inlineHelpText>From integration</inlineHelpText>
    <label>Basic Install Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>