CostalCloud/force-app/main/default/objects/WorkOrder/fields/Basic_Labor_Total_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basic_Labor_Total_Cost_Amount__c</fullName>
    <inlineHelpText>Roll-up totals from line items</inlineHelpText>
    <label>Basic Labor Total Cost Amount</label>
    <summarizedField>Labor__c.Total_Cost_Unit_x_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Labor__c.Type__c</field>
        <operation>equals</operation>
        <value>Basic</value>
    </summaryFilterItems>
    <summaryForeignKey>Labor__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>