CostalCloud/force-app/main/default/objects/WorkOrder/fields/Blinds_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blinds - Acknowledged ?</label>
    <type>Checkbox</type>
</CustomField>