CostalCloud/force-app/main/default/objects/WorkOrder/fields/Blinds_Appointment_2_Start__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Appointment_2_Start__c</fullName>
    <label>Blinds Appointment 2 Start</label>
    <type>DateTime</type>
</CustomField>