CostalCloud/force-app/main/default/objects/WorkOrder/fields/Blinds_Appointment_ID__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Appointment_ID__c</fullName>
    <label>Blinds Appointment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>