CostalCloud/force-app/main/default/objects/WorkOrder/fields/Blinds_Parent_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Parent_Job_ID__c</fullName>
    <label>Blinds Parent Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>