CostalCloud/force-app/main/default/objects/WorkOrder/fields/C_O_ready_to_submit_for_signature__c.field-meta.xml
<CustomField>
    <fullName>C_O_ready_to_submit_for_signature__c</fullName>
    <label>C/O ready to submit for signature?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>