CostalCloud/force-app/main/default/objects/WorkOrder/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Requested Cancelation</fullName>
            </value>
            <value>
                <fullName>Store Cancelled PO</fullName>
            </value>
            <value>
                <fullName>MP/CB Cancelled by Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>