CostalCloud/force-app/main/default/objects/WorkOrder/fields/Change_Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Description__c</fullName>
    <label>Change Order Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>