CostalCloud/force-app/main/default/objects/WorkOrder/fields/Change_order_needed__c.field-meta.xml
<CustomField>
    <fullName>Change_order_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change order needed</label>
    <type>Checkbox</type>
</CustomField>