CostalCloud/force-app/main/default/objects/WorkOrder/fields/Change_Order_Received__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order Received</label>
    <type>Checkbox</type>
</CustomField>