CostalCloud/force-app/main/default/objects/WorkOrder/fields/Change_Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Request__c</fullName>
    <label>Change Order Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>