CostalCloud/force-app/main/default/objects/WorkOrder/fields/Change_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in PB for Site Verification so custom button does not override Record Type</inlineHelpText>
    <label>Change Record Type</label>
    <type>Checkbox</type>
</CustomField>