CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Created_Date__c</fullName>
    <label>Client Created Date</label>
    <type>DateTime</type>
</CustomField>