CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Market__c.field-meta.xml
<CustomField>
    <fullName>Client_Market__c</fullName>
    <formula>Client_Store__r.Client_Market__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Market</label>
    <type>Text</type>
</CustomField>