CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Market_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Market_Number__c</fullName>
    <formula>Client_Store__r.Client_Market__r.Market_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Market Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>