CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Store__c.field-meta.xml
<CustomField>
    <fullName>Client_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client/Store</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only accounts with type of Client or Internal may be selected.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Client/Store)</relationshipLabel>
    <relationshipName>Client_Store_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>