CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Store_City__c.field-meta.xml
<CustomField>
    <fullName>Client_Store_City__c</fullName>
    <formula>Client_Store__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client/Store City</label>
    <type>Text</type>
</CustomField>