CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Store_Reporting_Market_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Store_Reporting_Market_ID__c</fullName>
    <formula>Client_Store__r.Reporting_Market__r.Reporting_Market_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client/Store Reporting Market ID</label>
    <type>Text</type>
</CustomField>