CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Store_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Client_Store_State_Zip__c</fullName>
    <formula>TEXT( Client_Store__r.BillingStateCode )  &amp; &quot;, &quot; &amp;  Client_Store__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client/Store State &amp; Zip</label>
    <type>Text</type>
</CustomField>