CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Store_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Store_Street_Address__c</fullName>
    <formula>Client_Store__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client/Store Street Address</label>
    <type>Text</type>
</CustomField>