CostalCloud/force-app/main/default/objects/WorkOrder/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <formula>TEXT(  Client_Store__r.Type  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Type</label>
    <type>Text</type>
</CustomField>