CostalCloud/force-app/main/default/objects/WorkOrder/fields/comOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>comOrderNumber__c</fullName>
    <label>OrderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>