CostalCloud/force-app/main/default/objects/WorkOrder/fields/Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Amount__c</fullName>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>