CostalCloud/force-app/main/default/objects/WorkOrder/fields/Created_from_Quick_Action__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Quick_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Quick Action</label>
    <type>Checkbox</type>
</CustomField>