CostalCloud/force-app/main/default/objects/WorkOrder/fields/Custom_Labor_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Custom_Labor_Total_Cost__c</fullName>
    <description>Verified values 6/30/2021</description>
    <inlineHelpText>Roll-up totals from line items</inlineHelpText>
    <label>Custom Labor Total Cost</label>
    <summarizedField>Labor__c.Total_Cost_Unit_x_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Labor__c.Type__c</field>
        <operation>equals</operation>
        <value>Custom Installs</value>
    </summaryFilterItems>
    <summaryForeignKey>Labor__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>