CostalCloud/force-app/main/default/objects/WorkOrder/fields/Customer_given_warranty_instructions__c.field-meta.xml
<CustomField>
    <fullName>Customer_given_warranty_instructions__c</fullName>
    <label>Customer given warranty/instructions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>