CostalCloud/force-app/main/default/objects/WorkOrder/fields/Customer_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Home_Phone__c</fullName>
    <label>Customer Home Phone</label>
    <type>Phone</type>
</CustomField>