CostalCloud/force-app/main/default/objects/WorkOrder/fields/Customer_Offer__c.field-meta.xml
<CustomField>
    <fullName>Customer_Offer__c</fullName>
    <label>Customer Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>