CostalCloud/force-app/main/default/objects/WorkOrder/fields/Customer_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Work_Phone__c</fullName>
    <label>Customer Work Phone</label>
    <type>Phone</type>
</CustomField>