CostalCloud/force-app/main/default/objects/WorkOrder/fields/CustomerFirstName__c.field-meta.xml
<CustomField>
    <fullName>CustomerFirstName__c</fullName>
    <inlineHelpText>Populated from integration</inlineHelpText>
    <label>CustomerFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>