CostalCloud/force-app/main/default/objects/WorkOrder/fields/CustomerLastName__c.field-meta.xml
<CustomField>
    <fullName>CustomerLastName__c</fullName>
    <inlineHelpText>Populated from integration</inlineHelpText>
    <label>CustomerLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>