CostalCloud/force-app/main/default/objects/WorkOrder/fields/CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhone__c</fullName>
    <inlineHelpText>Comes from integration</inlineHelpText>
    <label>Customer Mobile Phone</label>
    <type>Phone</type>
</CustomField>