CostalCloud/force-app/main/default/objects/WorkOrder/fields/CustomerUniqueID__c.field-meta.xml
<CustomField>
    <fullName>CustomerUniqueID__c</fullName>
    <externalId>true</externalId>
    <label>CustomerUniqueID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>