CostalCloud/force-app/main/default/objects/WorkOrder/fields/Date_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Measure__c</fullName>
    <label>Date of Measure</label>
    <type>Date</type>
</CustomField>