CostalCloud/force-app/main/default/objects/WorkOrder/fields/DDR__c.field-meta.xml
<CustomField>
    <fullName>DDR__c</fullName>
    <label>DDR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Tracking_Status</valueSetName>
    </valueSet>
</CustomField>