CostalCloud/force-app/main/default/objects/WorkOrder/fields/DDR_Needed__c.field-meta.xml
<CustomField>
    <fullName>DDR_Needed__c</fullName>
    <inlineHelpText>Workflow updates this field based on installer input values</inlineHelpText>
    <label>DDR Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>