CostalCloud/force-app/main/default/objects/WorkOrder/fields/Design_Connect__c.field-meta.xml
<CustomField>
    <fullName>Design_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked and other criteria is met an email will be sent to HD</inlineHelpText>
    <label>Design Connect</label>
    <type>Checkbox</type>
</CustomField>