CostalCloud/force-app/main/default/objects/WorkOrder/fields/Detailed_Design_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Design_Concerns__c</fullName>
    <label>Detailed Design Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>