CostalCloud/force-app/main/default/objects/WorkOrder/fields/Do_Not_Retry__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Work Order has been sent to THD after 5 tries, do not resend to Home Depot, this needs to be reviewed</description>
    <label>Do Not Retry</label>
    <type>Checkbox</type>
</CustomField>