CostalCloud/force-app/main/default/objects/WorkOrder/fields/Do_PO_Note_Validation__c.field-meta.xml
<CustomField>
    <fullName>Do_PO_Note_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, PO Note Validation Rule will run</inlineHelpText>
    <label>Do PO Note Validation</label>
    <type>Checkbox</type>
</CustomField>