CostalCloud/force-app/main/default/objects/WorkOrder/fields/Do_RRP__c.field-meta.xml
<CustomField>
    <fullName>Do_RRP__c</fullName>
    <formula>TRUE</formula>
    <inlineHelpText>Determines if RRP subflow should be invoked in FSL Mobile App.</inlineHelpText>
    <label>xDo RRP</label>
    <type>Checkbox</type>
</CustomField>