CostalCloud/force-app/main/default/objects/WorkOrder/fields/Electric_Job_SKU__c.field-meta.xml
<CustomField>
    <fullName>Electric_Job_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electric Job SKU</label>
    <referenceTo>Job_SKU__c</referenceTo>
    <relationshipLabel>Work Orders (Electric Job SKU)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>