CostalCloud/force-app/main/default/objects/WorkOrder/fields/Electrical_Amount_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Amount_Approval_Status__c</fullName>
    <label>Electrical Amount Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>