CostalCloud/force-app/main/default/objects/WorkOrder/fields/Energy_Code__c.field-meta.xml
<CustomField>
    <fullName>Energy_Code__c</fullName>
    <label>Energy Code?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>TBD2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>