CostalCloud/force-app/main/default/objects/WorkOrder/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <label>Engineer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>TBD2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>