CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_calcYrBuilt__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_calcYrBuilt__c</fullName>
    <label>Client Calculated Year Home Built</label>
    <length>255</length>
    <type>Text</type>
</CustomField>