CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_docStatu__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_docStatu__c</fullName>
    <label>epaInfo.docStatu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>