CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_jobId__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_jobId__c</fullName>
    <label>epaInfo.jobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>