CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_JobStatus__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_JobStatus__c</fullName>
    <label>epaInfo.JobStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>