CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_jobType__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_jobType__c</fullName>
    <label>epaInfo.jobType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>