CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_leadTestReq__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_leadTestReq__c</fullName>
    <label>epaInfo.leadTestReq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>