CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_leadTestStatus__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_leadTestStatus__c</fullName>
    <label>epaInfo.leadTestStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>