CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_lswpFollowed__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_lswpFollowed__c</fullName>
    <label>epaInfo.lswpFollowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>