CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_lswpRequired__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_lswpRequired__c</fullName>
    <label>epaInfo.lswpRequired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>