CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_ovrdeDocStatus__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_ovrdeDocStatus__c</fullName>
    <label>epaInfo.ovrdeDocStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>