CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_ovrdeRsn__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_ovrdeRsn__c</fullName>
    <label>epaInfo.ovrdeRsn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>