CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_ovrdeStatus__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_ovrdeStatus__c</fullName>
    <label>epaInfo.ovrdeStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>