CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_payStatus__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_payStatus__c</fullName>
    <label>epaInfo.payStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>