CostalCloud/force-app/main/default/objects/WorkOrder/fields/epaInfo_stDocStatus__c.field-meta.xml
<CustomField>
    <fullName>epaInfo_stDocStatus__c</fullName>
    <label>epaInfo.stDocStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>