CostalCloud/force-app/main/default/objects/WorkOrder/fields/Expected_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Date__c</fullName>
    <inlineHelpText>This value comes from the API and is directly associated to the Merchandise line items.</inlineHelpText>
    <label>Original ETA (Populated by API)</label>
    <summarizedField>Merchandise__c.Expected_Arrival_Date__c</summarizedField>
    <summaryForeignKey>Merchandise__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>