CostalCloud/force-app/main/default/objects/WorkOrder/fields/Exported_Date__c.field-meta.xml
<CustomField>
    <fullName>Exported_Date__c</fullName>
    <label>Exported Date</label>
    <type>DateTime</type>
</CustomField>