CostalCloud/force-app/main/default/objects/WorkOrder/fields/Exported_Status__c.field-meta.xml
<CustomField>
    <fullName>Exported_Status__c</fullName>
    <label>Exported Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chargeback Needed</fullName>
            </value>
            <value>
                <fullName>Unapproved Chargeback</fullName>
            </value>
            <value>
                <fullName>Chargeback Review Needed</fullName>
            </value>
            <value>
                <fullName>Chargeback Created</fullName>
            </value>
            <value>
                <fullName>Payment Issue is Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>