CostalCloud/force-app/main/default/objects/WorkOrder/fields/FileAttached__c.field-meta.xml
<CustomField>
    <fullName>FileAttached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FileAttached</label>
    <type>Checkbox</type>
</CustomField>