CostalCloud/force-app/main/default/objects/WorkOrder/fields/Final_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Final_Days_Open__c</fullName>
    <label>Final Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>