CostalCloud/force-app/main/default/objects/WorkOrder/fields/followUpAction__c.field-meta.xml
<CustomField>
    <fullName>followUpAction__c</fullName>
    <label>followUpAction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>