CostalCloud/force-app/main/default/objects/WorkOrder/fields/FollowUpDate__c.field-meta.xml
<CustomField>
    <fullName>FollowUpDate__c</fullName>
    <label>FollowUpDate</label>
    <type>Date</type>
</CustomField>