CostalCloud/force-app/main/default/objects/WorkOrder/fields/From_Integration__c.field-meta.xml
<CustomField>
    <fullName>From_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked only when record is created from Integration.  Later used to identify manually created w/o vs integration.</inlineHelpText>
    <label>From Integration</label>
    <type>Checkbox</type>
</CustomField>