CostalCloud/force-app/main/default/objects/WorkOrder/fields/Hardware_operational_acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Hardware_operational_acknowledgement__c</fullName>
    <label>Hardware operational acknowledgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>